--- a/Resources/Private/Templates/HtmlTable.html
+++ b/Resources/Private/Templates/HtmlTable.html
@@ -4,8 +4,20 @@
 
     <table class="{f:if(condition:'{data.table_class}', then:'ce-table ce-table-{data.table_class}', else:'ce-table')}" >
         <caption>{data.table_caption}</caption>
+    <f:if condition="{settings.useResponsiveTable}">
+        <f:variable name="captionId">table-caption-id</f:variable>
+        <div class="table-wrap" role="region" aria-labelledby="{captionId}" tabindex="0">
+    </f:if>
+
+        <f:if condition="{data.table_caption}">
+            <caption {f:if(condition:settings.useResponsiveTable,then:'id=\'{captionId}\'')}>{data.table_caption}</caption>
+        </f:if>
         <f:render partial="Row" arguments="{data:data, rows:rows}" />
     </table>
+
+    <f:if condition="{settings.useResponsiveTable}">
+        </div>
+    </f:if>
 
 </f:section>
 </html>
