[BUGFIX] show record content

--- a/Resources/Private/Partials/Cell.html
+++ b/Resources/Private/Partials/Cell.html
@@ -2,16 +2,15 @@
 
 <f:spaceless>
     <f:variable name="isHeaderCell"><f:if condition="{cell.headercell} || {header_position}==1 && {r.isFirst} || {header_position}==2 && {c.isFirst}">1</f:if></f:variable>
-    <f:variable name="content"><f:render section="CellContent" arguments="{records: records, cell: cell}" /></f:variable>
     <f:if condition="{isHeaderCell}">
         <f:then>
             <t:tableTag tagName="th" attributesInArray="{cell}">
-                <f:format.html>{cell.bodytext}</f:format.html>
+                <f:render section="CellContent" arguments="{records: records, cell: cell}" />
             </t:tableTag>
         </f:then>
         <f:else>
             <t:tableTag tagName="td" attributesInArray="{cell}">
-                <f:format.html>{cell.bodytext}</f:format.html>
+                <f:render section="CellContent" arguments="{records: records, cell: cell}" />
             </t:tableTag>
         </f:else>
     </f:if>
