[TASK] remove footer and header border

--- a/Resources/Private/Partials/Modal/Modal.html
+++ b/Resources/Private/Partials/Modal/Modal.html
@@ -2,14 +2,12 @@
 <div class="modal fade" id="tableModal" tabindex="-1" aria-labelledby="tableModalLabel" style="display: none;" aria-hidden="true">
   <div class="modal-dialog modal-fullscreen border border-5">
     <div class="modal-content p-3">
-      <div class="modal-header">
+      <div class="modal-header border-0">
         <h1 class="modal-title fs-5" id="tableModalLabel">{header}</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <f:render partial="Table" arguments="{_all}" />
-      </div>
-      <div class="modal-footer">
       </div>
     </div>
   </div>
